@@ -1,8 +1,16 @@
 * NEXT
 - Add temporary highlighting of acted upon target.
-- Expose ~cursorfree-to-action~ and ~cursorfree-to-modifier~.
+- Expose ~cursorfree-to-action~ and ~cursorfree-to-modifier~ for
+  creating custom actions and modifiers.
 - Fix bugs in "inside" and "outside" commands.
-- Add modifiers "block", "link", "sentence" and "everything".
+- Add modifiers:
+  - "leftline": Select everything to the left of the target on the
+    same line.
+  - "rightline": Select everything to the right of the target on the
+    same line.
+  - "block": Select the paragraph containing the target.
+  - "link": Select the URI containing the target.
+  - "everything": Add a target spanning the full buffer.
 - Add action "flash" to temporarily highlight a given target.  Useful
   for testing.
 - Copying strings now does not copy properties.  Previously, this
